--- a/app/Resources/views/todo/create.html.twig
+++ b/app/Resources/views/todo/create.html.twig
@@ -1,1 +1,10 @@
-TODO CREATE
+{% extends 'base.html.twig' %}
+
+{% block body %}
+    <h2>Add Todos</h2>
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    {{ form_end(form) }}
+
+
+{% endblock %}
