--- a/app/Resources/views/todo/index.html.twig
+++ b/app/Resources/views/todo/index.html.twig
@@ -1,1 +1,28 @@
-TODO INDEX
+{% extends 'base.html.twig' %}
+
+{% block body %}
+    <h2>Latest Todos</h2>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>#</th>
+            <th>Todo</th>
+            <th>Due Date</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for todo in todos %}
+            <tr>
+                <td>{{ todo.id }}</td>
+                <td>{{ todo.name }}</td>
+                <td>{{ todo.dueDate|date('F j, Y, g:i a') }}</td>
+                <td><a href="/todo/details/{{ todo.id }}" class="btn btn-success">View</a></td>
+                <td><a href="/todo/edit/{{ todo.id }}" class="btn btn-default">Edit</a></td>
+                <td><a href="/todo/delete/{{ todo.id }}" class="btn btn-danger">Delete</a></td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+{% endblock %}
