--- a/app/Resources/views/todo/edit.html.twig
+++ b/app/Resources/views/todo/edit.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    TODO EDIT
-
+    <h2 class="page-header">Edit Todos</h2>
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    {{ form_end(form) }}
 {% endblock %}
